Add hero_subtitle field to page collections
Introduce an optional `hero_subtitle` string field to the pages collections (pages, pages_en, pages_ru) in public/config.yml and public/admin/config.yml. This lets editors supply a hero subtitle for German, English and Russian pages; the field is non-required (`required: false`) and sits alongside the existing title and body fields.

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -116,6 +116,7 @@ collections:
     fields:
       - { label: "Typ", name: "type", widget: "hidden", default: "page" }
       - { label: "Titel", name: "title", widget: "string" }
+      - { label: "Hero Untertitel", name: "hero_subtitle", widget: "string", required: false }
       - { label: "Inhalt", name: "body", widget: "markdown" }
 
   - name: "pages_en"
@@ -131,6 +132,7 @@ collections:
     fields:
       - { label: "Type", name: "type", widget: "hidden", default: "page" }
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Hero Subtitle", name: "hero_subtitle", widget: "string", required: false }
       - { label: "Content", name: "body", widget: "markdown" }
 
   - name: "pages_ru"
@@ -146,6 +148,7 @@ collections:
     fields:
       - { label: "Тип", name: "type", widget: "hidden", default: "page" }
       - { label: "Заголовок", name: "title", widget: "string" }
+      - { label: "Подзаголовок Hero", name: "hero_subtitle", widget: "string", required: false }
       - { label: "Содержимое", name: "body", widget: "markdown" }
 
   - name: "menus"
